--- a/app/src/main/res/layout/fragment_vol_profile_editable.xml
+++ b/app/src/main/res/layout/fragment_vol_profile_editable.xml
@@ -595,7 +595,7 @@
 
                 </androidx.cardview.widget.CardView>
 
-                <androidx.cardview.widget.CardView
+               <!-- <androidx.cardview.widget.CardView
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                     app:cardCornerRadius="4dp"
@@ -665,7 +665,7 @@
 
                     </androidx.constraintlayout.widget.ConstraintLayout>
 
-                </androidx.cardview.widget.CardView>
+                </androidx.cardview.widget.CardView>-->
 
                 <RelativeLayout
                     android:layout_marginTop="10dp"
