--- a/app/src/main/res/layout/fragment_chat_now_form.xml
+++ b/app/src/main/res/layout/fragment_chat_now_form.xml
@@ -14,16 +14,11 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-
-
         app:layout_constraintVertical_bias="0.075"
-
         android:text="@string/talk_now"
         android:fontFamily="@font/avenir_heavy"
         android:textColor="@color/white"
         android:textSize="@dimen/heading_text_20sp"
-
-
         ></androidx.appcompat.widget.AppCompatTextView>
 
 
@@ -265,18 +260,47 @@
 
 
 
-                <androidx.appcompat.widget.AppCompatImageView
-                    android:id="@+id/chat_now_button"
-                    android:layout_width="65dp"
-                    android:layout_height="65dp"
-                    android:layout_gravity="end"
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
                     android:layout_marginEnd="20dp"
                     android:layout_marginTop="30dp"
-                    android:layout_marginBottom="5dp"
-                    android:src="@drawable/need_help_hd"
-                    android:elevation="@dimen/heading_text_14sp"
+                    android:layout_marginBottom="10dp"
 
-                   ></androidx.appcompat.widget.AppCompatImageView>
+                    >
+
+                    <androidx.appcompat.widget.AppCompatImageView
+                        android:id="@+id/chat_now_button"
+                        android:layout_width="65dp"
+                        android:layout_height="65dp"
+                       app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:src="@drawable/need_help_hd"
+                        android:elevation="5dp"
+                        ></androidx.appcompat.widget.AppCompatImageView>
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/talk_now_button"
+                        android:layout_width="55dp"
+                        android:layout_height="55dp"
+                     app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        android:layout_marginEnd="10dp"
+                        app:layout_constraintEnd_toStartOf="@+id/chat_now_button"
+                        android:src="@drawable/ic_launcher_background"
+                        android:elevation="5dp"
+                        ></de.hdodenhof.circleimageview.CircleImageView>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="5dp"
+                    android:text="@string/disclaimer"
+                    ></androidx.appcompat.widget.AppCompatTextView>
 
             </androidx.appcompat.widget.LinearLayoutCompat>
 
