--- a/app/src/main/res/layout/menu_vol.xml
+++ b/app/src/main/res/layout/menu_vol.xml
@@ -645,6 +645,7 @@
             </RelativeLayout>
             <RelativeLayout
 
+                android:visibility="gone"
                 android:id="@+id/announcements_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
